Initial Window Transistion Completed

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,6 @@
   <body>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-    <script src="./indexScript.js"></script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="MainNavigationBar">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -36,13 +35,12 @@
     </nav>
     <div id="root"></div>
   </body>
-  <div id="initialSplashWindow">
-    <h1 id="initialWindowText">
-       <span class="textspan">
-        Welcome... <br/>
-        ...Abroad
-       </span>
+  <div class="initialSplashWindow">
+    <h1 class="initialWindowText">
+       <span class="textspan1">Welcome...</span>
+       <br/>
+       <span class="textspan2">...Abroad</span>
     </h1>
   </div>
-  <div id="helperSplashWindow"></div>
+  <div class="helperSplashWindow"></div>
 </html>
